Make the DAV example actually work when included in the default config by allowing access.
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.2.x@371935 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/conf/extra/httpd-dav.conf.in
+++ b/docs/conf/extra/httpd-dav.conf.in
@@ -19,6 +19,9 @@ Alias /uploads "@@ServerRoot@@/uploads"
 <Directory "@@ServerRoot@@/uploads">
     Dav On
 
+    Order Allow,Deny
+    Allow from all
+
     AuthType Digest
     AuthName DAV-upload
     # You can use the htdigest program to create the password database:
