--- a/Makefile.in
+++ b/Makefile.in
@@ -74,9 +74,10 @@ install-conf:
 	    						loading_disabled=""; \
 	    					else \
 	    						loading_disabled="#"; \
-	    					fi; \
-	    					if test "$(LOAD_ALL_MODULES)" = "yes"; then \
-	    						loading_disabled=""; \
+	    						mpm=`echo $$j|sed s/_.*//`; \
+		    					if test "$(LOAD_ALL_MODULES)" = "yes" -a "$$mpm" != "mpm"; then \
+		    						loading_disabled=""; \
+	    						fi; \
 	    					fi; \
 							if test $$j = "cgid" -a "$$have_cgi" = "1"; then \
 								echo "<IfModule !mpm_prefork_module>"; \
