mod_http2/mod_proxy_http2: no longer reusing h2_request.o for proxy module
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1741596 13f79535-47bb-0310-9956-ffa450edef68

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -453,8 +453,7 @@ SET(mod_proxy_http2_requires               NGHTTP2_FOUND)
 SET(mod_proxy_http2_extra_defines          ssize_t=long)
 SET(mod_proxy_http2_extra_libs             ${NGHTTP2_LIBRARIES})
 SET(mod_proxy_http2_extra_sources
-  modules/http2/h2_proxy_session.c   modules/http2/h2_request.c
-  modules/http2/h2_util.c
+  modules/http2/h2_proxy_session.c   modules/http2/h2_util.c
 )
 SET(mod_proxy_http2_extra_libs       mod_proxy)
 SET(mod_ratelimit_extra_defines      AP_RL_DECLARE_EXPORT)
