Fix #40026 - Impossibility to unset Server Header

--- a/docs/conf/extra/httpd-default.conf.in
+++ b/docs/conf/extra/httpd-default.conf.in
@@ -49,7 +49,7 @@ AccessFileName .htaccess
 # This directive configures what you return as the Server HTTP response
 # Header. The default is 'Full' which sends information about the OS-Type
 # and compiled in modules.
-# Set to one of:  Full | OS | Minor | Minimal | Major | Prod
+# Set to one of:  Full | OS | Minor | Minimal | Major | Prod | Off
 # where Full conveys the most information, and Prod the least.
 #
 ServerTokens Full
